# atlassian-skills

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  api-endpoint-mapping.md  mcp-analysis.md
src/atlassian_skills/: __init__.py
src/atlassian_skills/bitbucket/: client.py  models.py
src/atlassian_skills/cli/: auth.py  bitbucket.py  config.py  confluence.py  jira.py  main.py  setup.py  upgrade.py  version.py  zephyr.py
src/atlassian_skills/confluence/: client.py  diff_local.py  models.py  pull_md.py  push_md.py
src/atlassian_skills/core/: auth.py  client.py  config.py  dryrun.py  errors.py  models.py  pagination.py  stdin.py
src/atlassian_skills/jira/: client.py  models.py  preprocessing.py
src/atlassian_skills/zephyr/: __init__.py  client.py  models.py
tests/: conftest.py  test_body_preservation.py
tests/benchmarks/: scenarios.py  test_l2_schema.py  test_l3_workflow.py  test_token_budget.py
tests/contract/: test_confluence_golden.py  test_confluence_models.py  test_jira_golden.py  test_jira_models.py
tests/e2e/: conftest.py  test_auth_matrix.py  test_confluence_operations.py  test_jira_operations.py
tests/fixtures/: README.md
tests/fixtures/bitbucket/: branch-list.json  build-status-list.json  comment-add-expected.json  diffstat-changes.json  pull-request-activities.json  pull-request-comments.json  pull-request-commits.json  pull-request-create-expected.json  pull-request-get.json  pull-request-list.json  task-create-expected.json  task-list.json
tests/fixtures/confluence/: create-page-expected.json  get-comments-sample.json  get-labels-sample.json  get-page-429140627-raw.json  get-page-429140627.json  get-page-history-v1.json  get-page-sample-raw.json  get-page-sample.json  get-space-tree-ivsl.json  get-space-tree-sample.json  search-proj.json  search-rlm.json  update-page-expected.json
tests/fixtures/jira/: create-issue-expected.json  get-agile-boards-proj.json  get-comments-sample.json  get-issue-proj3.json  get-issue-rlm3.json  get-projects-sample.json  get-sprints-sample.json  get-transitions-proj3.json  get-watchers-proj3.json  get-watchers-rlm3.json  search-fields-epic.json  (+3 more)
tests/snapshot/: test_confluence_compact.py  test_error_output.py  test_jira_compact.py
tests/unit/: conftest.py  test_auth.py  test_bitbucket_complete.py  test_bitbucket_read.py  test_bitbucket_write.py  test_body_conversion.py  test_bugfix_regressions.py  test_cli_confluence_integration.py  test_cli_jira_integration.py  test_cli_zephyr_integration.py  test_client.py  test_client_edge_cases.py  test_config.py  test_confluence_edge_cases.py  test_confluence_pages_extended.py  test_confluence_read.py  test_confluence_users.py  test_confluence_write.py  test_diff_local.py  test_dryrun.py  test_errors.py  test_formatters.py  test_jira_edge_cases.py  test_jira_projects.py  test_jira_read.py  test_jira_wiki_flags.py  test_jira_write.py  test_pagination.py  test_preprocessing.py  test_pull_md.py  test_push_md.py  test_setup.py  test_stdin.py  test_upgrade.py  test_version.py  test_zephyr_client.py
(+10 files in other folders)
