[project]
name = "atlassian-skills"
version = "0.1.1"
description = "Token-efficient CLI + Claude Code Skill for Atlassian Server/DC (Jira, Confluence, Bitbucket, Bamboo)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Eunsan Jo" }]
keywords = [
    "atlassian",
    "jira",
    "confluence",
    "bitbucket",
    "bamboo",
    "cli",
    "claude-code",
    "mcp-alternative",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.5",
    "tomli; python_version < '3.11'",
    "tomli-w",
    "cfxmark>=0.4",
    "platformdirs",
]

[project.optional-dependencies]
keyring = ["keyring>=24"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "respx>=0.21",
    "syrupy>=4",
    "tiktoken",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
atls = "atlassian_skills.cli.main:app"

[project.urls]
Repository = "https://github.com/eunsanMountain/atlassian-skills"
Issues = "https://github.com/eunsanMountain/atlassian-skills/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlassian_skills"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/.omc",
    "/.omx",
    "/references",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [".omc", ".omx", "references"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary preference
    "SIM102", # nested-if collapse
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
"src/atlassian_skills/cli/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
exclude = ["build/", "dist/", "references/", "tests/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: Tests requiring live Atlassian instance",
    "snapshot: Golden-file snapshot tests",
    "benchmark: Token benchmark tests",
]
